cmake_minimum_required(VERSION 3.10)
project(cpp_study)

set(CMAKE_CXX_STANDARD 11)

#add_executable(cpp_study main.cpp)
#测试输出
#add_executable(cpp_study cpp/basic/cout_test.cpp)
#测试输入
#add_executable(cpp_study cpp/basic/cin_test.cpp)
#数组输出
#add_executable(cpp_study cpp/basic/int_array_test.cpp)
#指针
#add_executable(cpp_study cpp/point/point_test.cpp)
#空指针
#add_executable(cpp_study cpp/point/null_point.cpp)
#hello world
#add_executable(cpp_study cpp/basic/hello_world.cpp)
#注释
#add_executable(cpp_study cpp/basic/commont.cpp)
#数据类型
#add_executable(cpp_study cpp/basic/data_type.cpp)
#定义新类型
add_executable(cpp_study cpp/basic/typedef_test.cpp)