cmake_minimum_required(VERSION 3.10)
project(cpp_study)

set(CMAKE_CXX_STANDARD 11)

#add_executable(cpp_study main.cpp)
#测试输出
#add_executable(cpp_study cpp/basic/cout_test.cpp)
#测试输入
#add_executable(cpp_study cpp/basic/cin_test.cpp)
#数组输出
#add_executable(cpp_study cpp/basic/int_array_test.cpp)
#指针
#add_executable(cpp_study cpp/point/point_test.cpp)
#空指针
#add_executable(cpp_study cpp/point/null_point.cpp)
#hello world
#add_executable(cpp_study cpp/basic/hello_world.cpp)
#注释
#add_executable(cpp_study cpp/basic/commont.cpp)
#数据类型
#add_executable(cpp_study cpp/basic/data_type.cpp)
#定义新类型
#add_executable(cpp_study cpp/basic/typedef_test.cpp)
#变量
#add_executable(cpp_study cpp/basic/val_test.cpp)
#变量的声明，定义，初始化
#add_executable(cpp_study cpp/basic/val_declare_define_init.cpp)
#局部变量和全局变量
#add_executable(cpp_study cpp/basic/val_all_test.cpp)
#常量的两种声明方式
#add_executable(cpp_study cpp/basic/const_two_test.cpp)
#静态变量声明 static存储类
#add_executable(cpp_study cpp/basic/static_test.cpp)
#extern 存储类
#add_executable(cpp_study cpp/basic/extern_test.cpp cpp/basic/extern_two.cpp)
#获取变量及类型的存储空间
#add_executable(cpp_study cpp/basic/size_of_type.cpp)
#强制类型转换
#add_executable(cpp_study cpp/basic/case_type_test.cpp)
#for 循环
#add_executable(cpp_study cpp/basic/for_test.cpp)
add_executable(cpp_study cpp/basic/for_test.cpp)